# geogram_predicates

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/in_circle_2d/: main.rs
examples/orient_2d/: main.rs
examples/orient_3d/: main.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_in_circle_2d_sos.rs  fuzz_in_sphere_3d_sos.rs  fuzz_orient_2d.rs  fuzz_orient_2dlifted_sos.rs  fuzz_orient_3d.rs  fuzz_orient_3dlifted_sos.rs
src/: expansion.rs  lib.rs  orient_2dlifted.rs  orient_2dlifter.rs  orient_3dlifted.rs  tests.rs  types.rs
src/expansion/: expansion.rs  macros.rs  mod.rs
test_utils/: Cargo.toml
test_utils/src/: lib.rs
