[workspace]
members = ["test_utils"]

[package]
name = "geogram_predicates"
description = "Rust bindings to the Geogram library's predicates module"
version = "0.2.1"
repository = "https://github.com/glennDittmann/geogram_predicates"
authors = ["Glenn Dittmann"]
edition = "2021"
license = "Apache-2.0"
keywords = ["computer-graphics", "math", "geometry", "predicates", "robust"]
categories = ["no_std", "mathematics"]

[dependencies]
cxx = { version = "1.0", features = ["alloc", "c++20"], default-features = false }
nalgebra = { version = "0.33.2", features = ["macros", "matrixmultiply"], default-features = false }
robust = "1.1"
smallvec = "1.15"

[build-dependencies]
cxx-build = "1.0"

[dev-dependencies]
float_extras = "0.1.6"
test_utils = { path = "test_utils" }
