[workspace]
members = ["test_utils"]
exclude = ["fuzz"]
# 2 so msrv does not hold up dependence versions like in not 3
resolver = "2"

[package]
name = "geogram_predicates"
description = "Rust port of the Geogram library's predicates module"
version = "0.2.1"
edition = "2024"
rust-version = "1.85.1"

repository = "https://github.com/glennDittmann/geogram_predicates"
authors = ["Glenn Dittmann", "TimTheBig"]
license = "LGPL-3.0"

keywords = ["computer-graphics", "math", "geometry", "predicates", "robust"]
categories = ["no-std::no-alloc", "mathematics", "graphics"]

[dependencies]
heapless = "0.8"
nalgebra = { version = "0.33", features = ["macros", "matrixmultiply"], default-features = false }
robust = "1.1"
# legacy
cxx = { version = "1.0", features = ["alloc", "c++20"], default-features = false, optional = true }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }

[dev-dependencies]
float_extras = "0.1.6"
test_utils = { path = "test_utils" }

[features]
alloc = ["cxx?/alloc"]
legacy = ["dep:cxx", "dep:cxx-build", "alloc"]
