[workspace]
members = ["test_utils"]
exclude = ["fuzz"]
# v2 so msrv does not hold up dependence versions like in v3
resolver = "2"

[package]
name = "geogram_predicates"
description = "Rust port of the Geogram library's predicates module"
version = "0.2.1"
edition = "2024"
rust-version = "1.85.1"

repository = "https://github.com/glennDittmann/geogram_predicates"
authors = ["Glenn Dittmann", "TimTheBig"]
license = "LGPL-3.0 OR MIT"

keywords = ["computer-graphics", "math", "geometry", "predicates", "robust"]
categories = ["no-std::no-alloc", "mathematics", "graphics"]

[dependencies]
heapless = "0.8"
nalgebra = { version = "0.33", features = ["macros", "matrixmultiply"], default-features = false }
robust = { version = "1.2", features = ["no_std"] }
# legacy
cxx = { version = "1.0", features = ["alloc", "c++20"], default-features = false, optional = true }
libm = { version = "0.2.15", optional = true }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }

[dev-dependencies]
float_extras = "0.1"
test_utils = { path = "test_utils" }

[features]
legacy = ["dep:cxx", "dep:cxx-build"]
no_std = ["dep:libm"]
